src/estilos/global.scss
/* ... */
.frame {
	display: flex;
	flex-wrap: wrap;
	position: relative;
}

.top.cell {
	.Masthead__image.is-parallax>img {
		object-fit: contain;
		object-position: center;
	}
}

.cell {
	position: relative;
	width: 100%;
	z-index: 2;

	@include bigger-than() {
		height: 0.000001rem;
		overflow: hidden;
		padding-bottom: 33%;
	}

	@include smaller-than() {
		padding-top: 0px;
		padding-bottom: 0px;
	}

	.banner {
		@include smaller-than() {
			padding-bottom: 75%;
			width: 100%;
		}
		@include bigger-than() {
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
			width: auto;
			height: auto;

		}
	}

	&-frame {
	  // min-height: 60vh;
	  width: auto;
	  height: auto;
	  background: $pbg;
	  @include bigger-than() {
		  @include flex-center();
		  flex-direction: column;
		  position: absolute;
		  top: 0;
		  left: 0;
		  right: 0;
		  bottom: 0;

	  }

	  @include content-styles();
	}

	&.top {
		min-height:84vh;
		@include bigger-than() {
			min-height: 97vh;
		}
	  
	  background: #000; // $ylo;
	  z-index: 1;
	  padding-bottom: 0;
	  @include flex-center();

	  img {
	    max-width: 60%;
	    // position: fixed;
	  }

	}

	&.half {
		@include smaller-than() {
			min-height: 0vh;

			border-left: 4px solid #000;

			border-right: 4px solid #000;
		}

		@include bigger-than() {
			padding-bottom: 44%;
			width: calc(50% - 2px);

			+ .half {
				border-left: 4px solid #000;
			}
		}
	}

	&.short {
	  // min-height: 36vh;
	  padding-bottom: 22%;
	}

	&.flow {
	  height: auto;
	  padding: 3rem 0;
	  background: #fff;

	  .cell-frame {
	    position: relative;
	  }
	}

	&.alert {
	  padding: 0;
	  height: $bv/2;
	  min-height: 0vh;

	  @include bigger-than($bpx2) {
	  	height: $bv/1.5;
	  }

	  .cell-frame {
	    background: $ylo url("~@/assets/bg-bars.png") fixed;
	    background-size: 166px 202px;
		@include smaller-than() {
			height: $bv/2;
		}

	    h3 {
	      color: #fff;
	      text-shadow: 0 1px 4px #000;
	      background: rgba(0,0,0,0.7);
	      padding: 2px 16px;
	      // border-radius: 4px;
	    }
	  }
	}

	&.brand {
	  // border-top: none!important;
	  height: 102px;
	  padding-bottom: 0;
	  .cell-frame {
	    background: #666;
	    padding-top: 24px;
	    padding-bottom: 24px;
	  }
	  img {
	    width: 140px;
	    margin-left: auto;
	    margin-right: auto;
	    display: block;
	  }
	}

	&.alert, &.sig, &.services, &.about, &.outreach {
	  .ribbon, .screen {
	    display: none;
	  }
	}

	&.dark {
	  background: #000;
	  .cell-frame {
	    background: transparent;
	    // color: #fff;
	  }
	  .screen {
	    background: rgba(255,255,255,0.4);
	  }
	  .button {
	    border-color: #666;
	    background: #666;
	    color: #fff;

	    @include ihover() {
		    &:hover {
		      border-color: $ylo;
		      background: $ylo;
		      color: #000;
		    }
		}
	  }
	}

	&.tall {
		@include bigger-than() {
			padding-bottom: 52%;
		}
		@include bigger-than($bpxl) {
			padding-bottom: 44%;
		}
		@include bigger-than($bpx2) {
			padding-bottom: 36%;
		}
		.cell-frame {
			@include smaller-than() {
				padding-top: 96px;
				padding-bottom: 96px;
			}
		}
	}

	&.taller {
		padding: $bv*2;
		min-height: 90vh;
	}

	&.natural {
	  min-height: 0vh;
	  height: auto;
	  padding-bottom: 0; // 5%;
	  	.cell-frame {
	  		padding-top: 48px;
	  		position: relative;
	  	}
	}

	+ .cell {
	  border-top: 4px solid #000;
	}

	&.sig {
	  min-height: 0vh;
	  padding: 20px 0;
	  border-top: none;
	  background: #000;
	  color: $ylo;
	  height: auto;
	  font-family: $title;
	  font-weight: 600;
	  font-size: 0.8rem;

	  span {
	  	@include smaller-than($bpsm) {
	  		display: block;

	  		&.dvv {
	  			display: none;
	  		}
	  	}
	  }

	  h3 {
	    display: none;
	  }

	  p {
	    color: $ylo;
	  }

	  .cell-frame {
	    background: #000;
	  }

	  .shell {
	    text-align: center;
	  }
	}

	h3 {
	  // font-size: 32px;
	  margin: 0;
	  // line-height: 1.1;
	}

	.shade {
	  box-shadow: 0 0 16px rgba(0,0,0,0.1);
	  border: 1px solid rgba(255,255,255,0.1);
	}
	.glow {
	  box-shadow: 0 0 16px rgba(255,255,255,0.2);
	  border: 1px solid rgba(0,0,0,0.1);
	}

	.shell {
	  width: 80%;
	  max-width: 580px;
	  margin-left: auto; margin-right: auto;
	  text-align: left;
	  ul {
	    padding: 0;
	    margin: 0;
	  }
	}

	&.services .shell {
		max-width: 100%;
	}

	@include pop-box();

	.dumbnav {
		display: block;
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		z-index: 4;
	}
}

iframe {
	border: none;
	outline: none;
	height: 120px;
	padding: 0;
}

.art {
	max-height: 90vh;

	&-shell {
	  iframe {
	    width: 100%;
	    max-width: 560px;
	    margin: 0 auto;
	  }
	}
}

ul.icons {
	display: flex;
	list-style: none;
	padding: 0;
	text-align: center;
	margin-top: 24px!important;
	flex-wrap: wrap;
	justify-content: center;

	li {
	  width: 50%;
	  cursor: pointer;
	  @include bigger-than($bpmd) {
	  	width: 33.333%;
	  }
	  @include bigger-than() {
	  	width: 25%;
	  }

	  // + li + li + li + li {
	    margin-top: 32px;
	  // }
	}

	.fa {
	  // font-size: 40px;
	}

	span {
	  @include flex-center();
	  margin-left: auto;
	  margin-right: auto;
	  height: 50px;
	  max-width: 120px;
	  // line-height: 1.2;
	  // margin-top: 4px;
	  // font-size: 1rem;
	  // text-transform: uppercase;
	}

	a {
		color: #000;
	}
}

.home .cell-frame .icon-sub {

}
/* ... */

